--- a/package.json
+++ b/package.json
@@ -1,46 +1,54 @@
 {
-  "private": true,
+  "name": "@zdmin/crab",
+  "version": "0.0.1",
   "type": "module",
-  "packageManager": "pnpm@10.13.1",
-  "engines": {
-    "node": "^20.19.0 || >=22.12.0"
+  "sideEffects": false,
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "dev": "vite",
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "test:unit": "vitest",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build",
+    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
+    "lint:eslint": "eslint . --fix",
+    "lint": "run-s lint:*"
+  },
+  "peerDependencies": {
+    "vue": "^3.2.0"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.3.1",
-    "@stylistic/eslint-plugin": "^5.2.2",
     "@tsconfig/node22": "^22.0.2",
+    "@types/jsdom": "^21.1.7",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.16.5",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitejs/plugin-vue-jsx": "^5.0.1",
     "@vitest/eslint-plugin": "^1.3.4",
     "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.31.0",
+    "eslint-plugin-oxlint": "~1.8.0",
     "eslint-plugin-vue": "~10.3.0",
     "jiti": "^2.4.2",
-    "lint-staged": "^16.1.2",
+    "jsdom": "^26.1.0",
     "npm-run-all2": "^8.0.4",
-    "simple-git-hooks": "^2.13.0",
-    "typescript": "~5.8.0"
+    "oxlint": "~1.8.0",
+    "sass-embedded": "^1.90.0",
+    "typescript": "~5.8.0",
+    "unplugin-auto-import": "^20.0.0",
+    "vite": "npm:rolldown-vite@latest",
+    "vite-plugin-vue-devtools": "^8.0.0",
+    "vitest": "^3.2.4",
+    "vue": "^3.5.18",
+    "vue-tsc": "^3.0.4"
   },
-  "scripts": {
-    "clean": "pnpm run -r clean",
-    "dev": "pnpm run --filter ./packages/playground -r dev",
-    "docs:dev": "pnpm run --filter ./packages/docs -r dev",
-    "docs:build": "pnpm run --filter ./packages/docs -r build",
-    "test:unit": "pnpm run --filter ./packages/zdmin-crab -r test:unit",
-    "coverage": "pnpm run --filter ./packages/zdmin-crab -r coverage",
-    "type-check": "run-p type-check:*",
-    "type-check:packages": "pnpm run -r type-check",
-    "type-check:self": "tsc",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix",
-    "lint:staged": "lint-staged",
-    "build": "pnpm run -r build",
-    "preinstall": "node scripts/preinstall.js",
-    "postinstall": "simple-git-hooks"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "pnpm exec run-s type-check lint:staged"
-  },
-  "lint-staged": {
-    "*.{vue,js,jsx,cjs,mjs,ts,tsx,cts,mts}": "eslint --fix"
+  "dependencies": {
+    "easy-bem": "^1.1.1",
+    "lodash-es": "^4.17.21"
   }
 }
