--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
-    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.16.5",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
@@ -42,6 +41,8 @@
     "typescript": "~5.8.0",
     "unplugin-auto-import": "^20.0.0",
     "vite": "npm:rolldown-vite@latest",
+    "vite-bundle-analyzer": "^1.2.0",
+    "vite-plugin-inspect": "^11.3.2",
     "vite-plugin-vue-devtools": "^8.0.0",
     "vitest": "^3.2.4",
     "vue": "^3.5.18",
@@ -49,6 +50,6 @@
   },
   "dependencies": {
     "easy-bem": "^1.1.1",
-    "lodash-es": "^4.17.21"
+    "es-toolkit": "^1.39.8"
   }
 }
