--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "type": "module",
   "sideEffects": false,
+  "exports": "./dist/index.js",
+  "types": "dist/index.d.ts",
+  "module": "dist/index.js",
   "files": [
     "dist"
   ],
@@ -17,6 +20,19 @@
     "lint:eslint": "eslint . --fix",
     "lint": "run-s lint:*"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xuyimingwork/zdmin-crab.git"
+  },
+  "bugs": {
+    "url": "https://github.com/xuyimingwork/zdmin-crab/issues"
+  },
+  "homepage": "https://github.com/xuyimingwork/zdmin-crab#readme",
+  "author": "Xu Yiming",
+  "license": "MIT",
   "peerDependencies": {
     "vue": "^3.2.0"
   },
@@ -42,6 +58,7 @@
     "unplugin-auto-import": "^20.0.0",
     "vite": "npm:rolldown-vite@latest",
     "vite-bundle-analyzer": "^1.2.0",
+    "vite-plugin-dts": "^4.5.4",
     "vite-plugin-inspect": "^11.3.2",
     "vite-plugin-vue-devtools": "^8.0.0",
     "vitest": "^3.2.4",
