--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "type": "module",
   "sideEffects": false,
   "exports": {
-		".": {
-			"types": "./dist/index.d.ts",
-			"import": "./dist/index.js"
-		},
-		"./*": "./*"
-	},
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./*": "./*"
+  },
   "types": "dist/index.d.ts",
   "module": "dist/index.js",
   "files": [
@@ -74,6 +74,7 @@
   },
   "dependencies": {
     "easy-bem": "^1.1.1",
-    "es-toolkit": "^1.39.8"
+    "es-toolkit": "^1.39.8",
+    "vue-asyncx": "^1.5.4"
   }
 }
